<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="app_name">Hey Friend</string>
    <string name="facebook_app_id">210490822762749</string>
    <string name= "invite_friend_twitter">Invite Friend Twitter</string>
    <string name="invite_friend_facebook">Invite Friend Facebook</string>
    <string name="txt_private_chat">Private</string>
    <string name="txt_group_chat">Group</string>
    <string name="txt_enter_message">Enter content</string>
    <string name="txt_state">Last seen </string>
    <string name="txt_you">You</string>
    <string name="txt_seconds_ago">seconds ago</string>
    <string name="txt_minutes_ago">minutes ago</string>
    <string name="txt_hours_ago">hours ago</string>
    <string name="txt_about">about</string>
    <string name="txt_days_ago">days ago</string>
    <string name="announce_cant_send_msg">Can\'t send content!</string>
    <string name="announce_empty_msg">Empty content!</string>
    <string name="announce_cant_delete_msg">Can\'t delete content!</string>
    <string name="announce_msg_is_deleted">Message is deleted!</string>
    <string name="name">Name</string>
    <string name="txt_send_friend_request">Send a friend request</string>
    <string name="txt_remove_friend">Remove friend</string>
    <string name="txt_send_message">Send content</string>
    <string name="txt_date_of_birth">Date of birth</string>
    <string name="txt_gender">Gender</string>
    <string name="txt_male">Male</string>
    <string name="txt_female">Female</string>
    <string name="txt_to">To:</string>
    <string name="txt_invitation_msg_example">Hey, May I become your friend?</string>
    <string name="txt_cancel">Cancel</string>
    <string name="announce_cant_send_invitation">Can\'t send invitation!</string>
    <string name="announce_invitation_msg_is_sent">Invitation content is sent!</string>
    <string name="txt_search_friend">Search friend</string>
    <string name="announce_friend_is_removed">The friend is removed!</string>
    <string name="announce_database_has_problem">Database has problem!</string>
    <string name="announce_no_connection_to_network">No connection to network available</string>
    <string name="announce_no_connection_to_database">No connection to database</string>
    <string name="txt_send_invitation">Send invitation</string>
    <string name="txt_block_user">Block user</string>
    <string name="announce_cant_remove_this_friend">Can\'t remove this friend!</string>
    <string name="announce_cant_delete_invitation_message">Can\'t delete invitation content!</string>
    <string name="announce_add_friend_successfully">Add friend successfully</string>
    <string name="announce_invitation_msg_is_deleted">Invitation content is deleted</string>
    <string name="announce_cant_delete_this_conversation">Cant delete this conversation!</string>
    <string name="announce_this_conversation_is_deleted">This conversation is deleted</string>
    <string name="txt_enter_name">Enter name</string>
    <string name="txt_suggestion">Suggestion:</string>
    <string name="txt_message">Message:</string>
    <string name="txt_hello_everyone">Hello everyone.</string>
    <string name="announce_msg_is_sent">Message is sent!</string>
    <string name="txt_information">Information</string>
    <string name="txt_add_participants">Add participants</string>
    <string name="txt_remove_participant">Remove Participants</string>
    <string name="txt_edit_participants">Edit participants</string>
    <string name="txt_edit_conversation_name">Edit conversation name</string>
    <string name="txt_save">Save</string>
    <string name="announce_no_participant">No participant!</string>
    <string name="announce_empty_name">Empty name!</string>
    <string name="announce_error">Error</string>
    <string name="announce_successfully">Successfully</string>
    <string name="txt_edit_cvs_name">Edit Conversation Name</string>
    <string name="txt_unnamed">Unnamed</string>
    <string name="announce_welcome">Welcome </string>
    <string name="announce_fill_in_the_blank">Fill your name in the blank!</string>
    <string name="txt_pick_your_birthday">Pick your birthday</string>
    <string name="txt_update">Update</string>
    <string name="txt_save_info">Save</string>
    <string name="announce_invalid_date_of_birth">Invalid date of birth format</string>
    <string name="text_there_is_no_invitation_message">There is no invitation content.</string>
    <string name="txt_list_participants">List participants</string>
    <string name="announce_leave_group">Do you really want to leave this group?</string>
    <string name="txt_ok">OK</string>
    <string name="txt_leave_this_group">Leave this group</string>
    <string name="txt_invite_friend_sms">Invite Friend SMS</string>
    <string name="txt_log_out">Log Out</string>
    <string name="txt_hey_friend_app">Hey Friend Application</string>
    <string name="txt_invitation_sms">Join in Hey Friend app with me</string>
    <string name="txt_call_to_action">Call to action</string>
    <string name="txt_coming_soon">Comming soon...</string>
    <string name="txt_total_0_friends">Total 0 friends</string>
    <string name="txt_friends">friends</string>
    <string name="txt_total">"Total "</string>

    <string name="name_app">Hey, friend!</string>
    <string name="slogan">Keep tracking with your friends</string>
    <string name="login_fb">Login with facebook</string>
    <string name="login_gg">Login with google</string>
    <string name="login_tw">Login with twitter</string>
    <string name="txt_type_name">Type name</string>
    <string name="txt_uploading">Uploading</string>
    <string name="txt_have_something_new">Have something new?</string>
    <string name="txt_post">Post</string>
    <string name="txt_write_something">Write something...</string>
    <string name="txt_take_a_comment">Take a comment</string>
    <string name="txt_comments">comments</string>
    <string name="txt_likes">likes</string>
    <string name="txt_edit">Edit</string>
    <string name="txt_gender_selection">Gender Selection</string>
    <string name="txt_name">Name</string>
</resources>
