<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#eafefcff"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:layout_margin="30dp">

        <EditText
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editName"
            android:textColor="#000000"
            android:textColorHint="#9f9f9f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <RadioGroup
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:id="@+id/rbGroup"
            android:orientation="horizontal">

            <RadioButton
                android:text="@string/txt_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbFemale"
                android:layout_weight="1"
                />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_male"
                android:id="@+id/rbMale"
                android:layout_weight="1" />

        </RadioGroup>

        <EditText
            android:text="@string/txt_pick_your_birthday"
            android:textColor="#000000"
            android:textColorHint="#9f9f9f"
            android:textAppearance="?android:textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editDate" />

        <Button
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:id="@+id/btUpdate"
            android:text="@string/txt_update"
            android:elevation="0dp"
            android:background="@drawable/border_button_positive"/>
    </LinearLayout>

</RelativeLayout>
