<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="200dp"
    android:minWidth="250dp"
    android:background="@drawable/border_dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/txt_edit_cvs_name"
        android:gravity="center_vertical|center_horizontal"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/etEditName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@android:color/transparent"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/lSendMsgAndRemoveFriend"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_save"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:id="@+id/btOK"
            android:background="@drawable/border_button_positive"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_cancel"
            android:id="@+id/btCancel"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:background="@drawable/border_button_positive"
            android:textAllCaps="false"
            android:layout_margin="10dp"

            /></LinearLayout>
</LinearLayout>