<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="250dp"
    android:minWidth="250dp"
    android:background="@drawable/border_dialog">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="Write something to HeyFriend"
        android:gravity="center"
        android:textAppearance="?android:textAppearanceMedium"
        android:background="@color/colorPrimary"
        />
    <EditText
        android:id="@+id/etContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:hint="@string/txt_have_something_new"
        android:background="@android:color/transparent"
        android:layout_gravity="center_vertical"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:id="@+id/ivClearImage"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/material_icons_white_close"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/llAddImage">
            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:id="@+id/ibAddImage"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:background="@drawable/border_button_add_in_new_status_dialog"
                android:src="@drawable/ic_add_white"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Add image"
                android:textAllCaps="false"
                android:layout_marginLeft="10dp"
                android:textColor="#97635e5e"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:id="@+id/iv_dialog_post_status"

            />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/lSendMsgAndRemoveFriend"
        android:orientation="horizontal"

        >
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_post"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:id="@+id/btOK"
            android:background="@drawable/border_button_positive"
            />
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/txt_cancel"
            android:id="@+id/btCancel"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:background="@drawable/border_button_positive"
            android:textAllCaps="false"
            android:layout_margin="10dp"

            /></LinearLayout>
</LinearLayout>